[1.0.0] - Add mapstruct mapper - Add endpoints for getting tag groups and saving pomodoro - Update telegram-bot project